== 1.5.2 2009-01-12

* Trying to remove a circular rubigen->newgem->rubigen dependency issue

== 1.5.1 2008-12-29

* Return #write_manifest which was accidently removed
* Moved website into gh-pages branch; thus moving homepage from http://rubigen.rubforge.org -> 
  http://drnic.github.com/rubigen

== 1.5.0 2008-12-27

* Preparation for integration back into Rails
* --git/-g option for generated files to be added via git commands
* after_generate hook for generators (used as rails' templates mechanism)
* bumped activesupport requirement to 2.2.2
* upgraded internal files to support latest newgem (removed config/ folder, moved config to Rakefile)
* support for RAILS_ROOT as a destination root
* removed references to Merb which now has its own generator system; can access any merb
  generators via `rubigen` helper app
* RubiGen::Base.active can be changed to a RubiGen::Base subclass that will be used
  for lookups (e.g. RubiGen::Base.active = Rails::Generator::Base)

== 1.4.0 2008-12-11

* rubigen tests now pass against ruby 1.9.0 and ruby 1.9.1(prerelease 2)
* puts are sent to an explicit #stdout which can be STDOUT or a StringIO passed from tests; test output is now clean!

== 1.3.4 2008-11-12

* ruby_app: fixed reference to non-existent version.rb [jperkins]

== 1.3.3 2008-10-21

* prepend_sources correctly places arguments at start of sources list
* removed lib/rubigen/version.rb; RubiGen::VERSION is in lib/rubigen.rb now; there is no RubiGen::VERSION::STRING

== 1.3.2 2008-05-19

* app_gen/bin - includes #!/usr/bin/env ruby
* added examples of file_copy_each and template_copy_each to generators

== 1.3.1 2008-04-25

* Fixed the require statements in generated tests for rails/merb generators
* Rails::Generator::Base is a valid generator superclass
* Rails generators have alternate template (based on standard NamedBase)
* test helpers define RAILS_ROOT for rails generators

== 1.3.0 2008-04-25
