@@ -4,6 +4,6 @@ Feature: rubigen command-line interface to access generators anywhere
   I want to execute generators anywhere without a script/generate helper script
   
   Scenario: Run a component generator
-    When I run executable "rubigen" with arguments "rubygems component_generator foo bar"
+    When I run local executable "rubigen" with arguments "rubygems component_generator foo bar"
     Then file "bar_generators/foo/foo_generator.rb" is created
   
