@@ -36,7 +36,7 @@ end
 When /^I run project executable "(.*)" with arguments "(.*)"/ do |executable, arguments|
   @stdout = File.expand_path(File.join(@tmp_root, "executable.out"))
   in_project_folder do
-    system "ruby #{executable} #{arguments} > #{@stdout} 2> #{@stdout}"
+    system "ruby -rubygems #{executable} #{arguments} > #{@stdout} 2> #{@stdout}"
   end
 end
 
@@ -44,7 +44,7 @@ When /^I run local executable "(.*)" with arguments "(.*)"/ do |executable, argu
   @stdout = File.expand_path(File.join(@tmp_root, "executable.out"))
   executable = File.expand_path(File.join(File.dirname(__FILE__), "/../../bin", executable))
   in_project_folder do
-    system "ruby #{executable} #{arguments} > #{@stdout} 2> #{@stdout}"
+    system "ruby -rubygems #{executable} #{arguments} > #{@stdout} 2> #{@stdout}"
   end
 end
 
