@@ -1,9 +1,9 @@
-require File.dirname(__FILE__) + "/../../lib/rubigen"
-
 gem 'cucumber'
 require 'cucumber'
 gem 'rspec'
 require 'spec'
+
+require File.dirname(__FILE__) + "/../../lib/rubigen"
 
 Before do
   @tmp_root = File.dirname(__FILE__) + "/../../tmp"
