@@ -1,6 +1,12 @@
 $:.unshift(File.dirname(__FILE__)) unless
   $:.include?(File.dirname(__FILE__)) || $:.include?(File.expand_path(File.dirname(__FILE__)))
 
+begin
+  # if you are using rubygems, fix to 2.3.5
+  gem 'activesupport', '2.3.5'
+rescue
+end
+
 require 'active_support' 
 
 module RubiGen
