@@ -1,8 +1,8 @@
+require 'rubygems'
 require 'test/unit'
 require File.dirname(__FILE__) + '/../lib/rubigen'
 require 'rubigen/helpers/generator_test_helper'
 include RubiGen
-require 'rubygems'
 require "shoulda"
 require "shoulda/test_unit"
 require 'mocha'
